--- a/roles/k3s/master/tasks/main.yml
+++ b/roles/k3s/master/tasks/main.yml
@@ -59,7 +59,13 @@
     owner: "{{ ansible_user }}"
     mode: "u=rw,g=,o="
 
-- name: Replace https://localhost:6443 by https://master-ip:6443
+- name: Copy config file to local machine
+  fetch:
+    src: ~{{ ansible_user }}/.kube/config
+    dest: "{{ lookup('env', 'HOME') }}/.kube/config"
+    flat: yes
+
+- name: "Replace https://localhost:6443 by https://{{ master_ip }}:6443"
   command: >-
     k3s kubectl config set-cluster default
       --server=https://{{ master_ip }}:6443
