feat: added configurable hostname

--- a/roles/k8s-manifests/k8s-dashboard-remote-access/tasks/main.yml
+++ b/roles/k8s-manifests/k8s-dashboard-remote-access/tasks/main.yml
@@ -50,7 +50,7 @@
           traefik.ingress.kubernetes.io/ssl-redirect: "true"
       spec:
         rules:
-          - host: raspberrypi
+          - host: "{{ master_hostname }}"
             http:
               paths:
                 - path: /kubernetes
