--- a/inventory/my-cluster/hosts.ini
+++ b/inventory/my-cluster/hosts.ini
@@ -1,11 +1,8 @@
 [master]
-192.168.1.128
+rpi-m01 ansible_host=192.168.1.128
 
 [node]
 #192.168.1.34
-#192.168.1.39
-#192.168.1.16
-#192.168.1.32
 
 [k3s_cluster:children]
 master
