--- a/site.yml
+++ b/site.yml
@@ -7,6 +7,7 @@
     - role: prereq
     - role: download
     - role: raspberrypi
+    - role: pip-packages-install
 
 - hosts: master
   become: yes
