--- a/inventory/my-cluster/group_vars/all.yml
+++ b/inventory/my-cluster/group_vars/all.yml
@@ -4,6 +4,6 @@ ansible_user: pi
 systemd_dir: /etc/systemd/system
 master_ip: "{{ hostvars[groups['master'][0]]['ansible_host'] | default(groups['master'][0]) }}"
 master_hostname: "{{ groups['master'][0] }}"
-extra_server_args: ""
+extra_server_args: "--disable traefik"
 extra_agent_args: ""
 cert_issuer_name: "{{ master_hostname }}-ca-issuer"
