--- a/roles/ingress-controllers/traefik/tasks/main.yml
+++ b/roles/ingress-controllers/traefik/tasks/main.yml
@@ -13,3 +13,53 @@
     values:
       additionalArguments:
         - --serversTransport.insecureSkipVerify=true
+      logs:
+      # general:
+      #   level: INFO
+      # access:
+      #   enabled: true
+      ingressRoute:
+        dashboard:
+          enabled: false
+
+- name: Create {{ traefik }} certificate
+  k8s:
+    state: present
+    apply: true
+    definition:
+      apiVersion: cert-manager.io/v1
+      kind: Certificate
+      metadata:
+        name: "{{ traefik }}-cert"
+        namespace: "{{ traefik }}"
+      spec:
+        secretName: "{{ traefik }}-cert-secret"
+        dnsNames:
+          - "{{ master_hostname }}"
+          - "*.{{ master_hostname }}"
+        issuerRef:
+          name: "{{ cert_issuer_name }}"
+          kind: ClusterIssuer
+
+- name: Create an IngressRoute for {{ traefik }} Dashboard
+  k8s:
+    state: present
+    apply: true
+    definition:
+      apiVersion: traefik.containo.us/v1alpha1
+      kind: IngressRoute
+      metadata:
+        name: traefik-dashboard
+        namespace: "{{ traefik }}"
+      spec:
+        entryPoints:
+          - web
+          - websecure
+        routes:
+          - match: Host(`{{ master_hostname }}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
+            kind: Rule
+            services:
+              - name: api@internal
+                kind: TraefikService
+        tls:
+          secretName: "{{ traefik }}-cert-secret"
